# svg-to-compose-vector

./: .gitignore  CLAUDE.md  demo_svg_to_kotlin.py  pyproject.toml
.claude/: AWAKENING_INSTRUCTIONS.md  settings.local.json
.claude/tasks/: detailed_tasks.xml  groups_and_transforms_achievement.xml  implementation_details.xml  key_files_reference.xml  next_milestone_clippath.md  project_overview.xml  project_status.xml  svg_to_compose_mapping.xml  technical_decisions.xml
examples/: demo_advanced_paths.py  demo_custom_templates.py  demo_gradients.py  demo_groups_and_transforms.py  demo_shapes.py  demo_svg_to_kotlin.py  template_demo.py  test_formatting_demo.py
examples/custom_templates/: builtin_colors_demo.j2  composable_with_params.j2  documented_icon.j2  multicolor_example.j2  sealed_class_icon.j2
examples/output/: AdvancedPaths.kt  CircleTest.kt  ComplexGradientDemo.kt  EllipseTest.kt  GroupsTest.kt  LineTest.kt  (+17 more)
scripts/: publish.py
src/: cli.py
tests/: test_basic_functionality.py  test_batch_conversion.py  test_builtin_colors_multicolor.py  test_cli_template_integration.py  test_clippath.py  test_config_system.py  test_enhanced_color_support.py  test_extended_path_commands.py  test_gradient_namespace_fix.py  test_gradient_support.py  test_groups_and_transforms.py  test_multicolor_template_system.py  test_shape_elements.py  test_stroke_functionality.py  test_style_attribute.py  test_svg_parser.py  test_template_engine.py  test_template_formatting.py  test_template_output_precision.py  test_template_system_integration.py  test_unsupported_elements.py
(+18 files in other folders)
