[project]
name = "svg-to-compose-vector"
version = "0.1.0"
description = "Convert SVG files to Compose ImageVector code"
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1.0", "click>=8.0.0"]

[dependency-groups]
test = ["pytest>=7.0.0"]
dev = ["ruff"]

[project.scripts]
svg2compose = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
indent-width = 2
